# scvi-tools-gui

./: .gitignore  README.md  app.py  config.json  files.json  pyproject.toml  setup.py  status.json
scvi_tools_gui/: app.py  output.txt  styles.py  utils.py
